// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multi route 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__MainRow-sc-o1ook0-0 dvSulK css-vurnku"
  >
    <div
      class="RoutingDiagram__EdgeRow-sc-o1ook0-1 dyzDCt css-vurnku"
    >
      CurrencyLogo currency=USDC
      <svg
        class="RoutingDiagram__StyledChevronRight-sc-o1ook0-5 gqqmAm"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
    </div>
    <div
      class="css-vurnku"
    >
      <div
        class="Column__AutoColumn-sc-1kykgp9-2 iNjnaZ"
      >
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteRow-sc-o1ook0-2 lmTMKd itvFNV jYUaCo"
        >
          <div
            class="RoutingDiagram__DottedLine-sc-o1ook0-4 iCOEgL"
          />
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__OpaqueBadge-sc-o1ook0-6 gayll bnrVWn"
          >
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
            >
              7.5%
            </div>
          </div>
          <div
            class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
            style="justify-content: space-evenly; z-index: 2;"
            width="100%"
          >
            Popover
          </div>
        </div>
      </div>
      <div
        class="Column__AutoColumn-sc-1kykgp9-2 iNjnaZ"
      >
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteRow-sc-o1ook0-2 lmTMKd itvFNV jYUaCo"
        >
          <div
            class="RoutingDiagram__DottedLine-sc-o1ook0-4 iCOEgL"
          />
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__OpaqueBadge-sc-o1ook0-6 gayll bnrVWn"
          >
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
            >
              2.5%
            </div>
          </div>
          <div
            class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
            style="justify-content: space-evenly; z-index: 2;"
            width="100%"
          >
            PopoverPopover
          </div>
        </div>
      </div>
    </div>
    <div
      class="RoutingDiagram__EdgeRow-sc-o1ook0-1 dyzDCt css-vurnku"
    >
      <svg
        class="RoutingDiagram__StyledChevronRight-sc-o1ook0-5 gqqmAm"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders single route 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__MainRow-sc-o1ook0-0 dvSulK css-vurnku"
  >
    <div
      class="RoutingDiagram__EdgeRow-sc-o1ook0-1 dyzDCt css-vurnku"
    >
      CurrencyLogo currency=USDC
      <svg
        class="RoutingDiagram__StyledChevronRight-sc-o1ook0-5 gqqmAm"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
    </div>
    <div
      class="css-vurnku"
    >
      <div
        class="Column__AutoColumn-sc-1kykgp9-2 iNjnaZ"
      >
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 RoutingDiagram__RouteRow-sc-o1ook0-2 lmTMKd itvFNV jYUaCo"
        >
          <div
            class="RoutingDiagram__DottedLine-sc-o1ook0-4 iCOEgL"
          />
          <div
            class="Badge-sc-1mhw5si-0 RoutingDiagram__OpaqueBadge-sc-o1ook0-6 gayll bnrVWn"
          >
            <div
              class="theme__TextWrapper-sc-18nh1jk-0 cWOfab css-15li2d9"
            >
              10%
            </div>
          </div>
          <div
            class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 iqvZFe itvFNV kkMfuq"
            style="justify-content: space-evenly; z-index: 2;"
            width="100%"
          >
            Popover
          </div>
        </div>
      </div>
    </div>
    <div
      class="RoutingDiagram__EdgeRow-sc-o1ook0-1 dyzDCt css-vurnku"
    >
      <svg
        class="RoutingDiagram__StyledChevronRight-sc-o1ook0-5 gqqmAm"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders when no routes are provided 1`] = `
<DocumentFragment>
  <div
    class="RoutingDiagram__MainRow-sc-o1ook0-0 dvSulK css-vurnku"
  >
    <div
      class="RoutingDiagram__EdgeRow-sc-o1ook0-1 dyzDCt css-vurnku"
    >
      CurrencyLogo currency=DAI
      <svg
        class="RoutingDiagram__StyledChevronRight-sc-o1ook0-5 gqqmAm"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
    </div>
    <div
      class="css-vurnku"
    />
    <div
      class="RoutingDiagram__EdgeRow-sc-o1ook0-1 dyzDCt css-vurnku"
    >
      <svg
        class="RoutingDiagram__StyledChevronRight-sc-o1ook0-5 gqqmAm"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
      CurrencyLogo currency=USDC
    </div>
  </div>
</DocumentFragment>
`;
